starting docker works - established containers for frontend, backend, database and pgadmin